[package]
name = "bevy_point_cloud"
version = "0.1.0"
edition = "2021"

[features]
default = ["opd", "las"]
opd = ["opd-parser"]

[dependencies]
bevy = "0.14.0"
opd-parser = { version = "0.5.0", optional = true }
anyhow = "1"
las = { version = "0.8", features = ["laz"], optional = true }
bytemuck = "1.13.1"
nom = "7.1.3"

[dev-dependencies]
smooth-bevy-cameras = "0.12.0"
bevy_egui ="0.28"
